--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
+  /* color: white; */
 }
-
+.weather__info{
+  color: white;
+  font-size: calc(10px + 2vmin);
+}
+.weather{
+  color: white;
+  /* font-size: 20px; */
+}
 .App-link {
   color: #61dafb;
 }
